# mcmxi

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  python-pypi.yml
mcmxi_config/: sopel.cfg
src/mcmxi_cli/: __init__.py
src/mcmxi_sopel_modules/: .#__init__.py  __init__.py
src/mcmxi_sopel_modules/jinpark/phenny-modules/: .gitignore  Pipfile  README.md  aftership.py  air-quality.py  alphavantage.py  bobkov.py  crypto.py  giphy.py  google_search.py  jargon.py  jisho.py  new-clock.py  new-translate.py  new-url.py  new-weather.py  new-wikipedia.py  requirements.txt  stocks.py  urbandictionary.py  visualcrossing.py  voice_join.py  wolfram.py
src/mcmxi_sopel_modules/kic0/Block0/: README.md  block-alert.py  network.py  pool.py
src/mcmxi_sopel_modules/nc/adderall/: adderall.py
src/mcmxi_sopel_modules/nfearnley/memo/: memo.py
src/mcmxi_sopel_modules/pixelguff/ultrabutt/: LICENSE  README.md  bgmarkov.py  canary.py  dd.py  douchebags.py  elizabot.py  fart.py  fuckedreport.py  fuckerreport.py  goog.py  lookup.py  metacritic.py  mingeburger.py  overton.py  randomword.py  sexwee.py  testes.py  toot.py  tootmarkov.py  tootndb.py  topic.py  topiccommands.py  ukdeathwatch.py  wash.py  wiki.py
src/mcmxi_sopel_modules/venatiodecorus/sopel-crypto/: crypto.py
src/mcmxi_sopel_modules/zsutton92/sopel-modules/: README.md  asimov.py  claimnewuser.py  ferengi.py  meraki.py  packt.py  rickroll.py  rules.py  rulesnew.py  spicemodules.py  techsupport.py
