[tool.poetry]
name = "mcmxi"
version = "2024.1.17"
description = "IRC bot"
authors = ["Paige Thompson <paige@paige.bio>"]
readme = "README.md"
packages = [{ include = "mcmxi_sopel_modules", from = "src" }]
include = [{ path = "mcmxi_config", format = ["sdist", "wheel"] }]
exclude = ["src/mcmxi_sopel_modules/cottongin/sopel_modules/food.py",
        "src/mcmxi_sopel_modules/cottongin/sopel_modules/imgur.py",
        "src/mcmxi_sopel_modules/cottongin/sopel_modules/mma.py",
        "src/mcmxi_sopel_modules/cottongin/sopel_modules/reelgoodroulette.py",
        "src/mcmxi_sopel_modules/cottongin/sopel_modules/steam.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/bitcoin.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/jeopardy.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/nicovideourl.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/remind.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/sotd.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/soundcloudurl.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/ssthis.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/testmods.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/trivia.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/url2.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/vndb.py",
        "src/mcmxi_sopel_modules/dasu/syrup_sopel_modules/yootoob.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/air-quality.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/google_search.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/new-clock.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/new-translate.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/new-url.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/new-weather.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/new-wikipedia.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/visualcrossing.py",
        "src/mcmxi_sopel_modules/jinpark/phenny_modules/wolfram.py",
        "src/mcmxi_sopel_modules/pilate/sopel_modules/8ball.py",
        "src/mcmxi_sopel_modules/pilate/sopel_modules/crypto.py",
        "src/mcmxi_sopel_modules/pilate/sopel_modules/youtube.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/metacritic.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/overton.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/tootmarkov.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/tootndb.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/toot.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/topiccommands.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/topic.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/ukdeathwatch.py",
        "src/mcmxi_sopel_modules/pixelguff/ultrabutt/wiki.py",
        "src/mcmxi_sopel_modules/russellb/sopelmods/fortuneaa.py",
        "src/mcmxi_sopel_modules/russellb/sopelmods/fortune.py",
        "src/mcmxi_sopel_modules/russellb/sopelmods/urban.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/8ball.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/ai.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/calibre.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/debug.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/dicelog.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/fuckingweather.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/imgur.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/lart.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/nws.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/oblique.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/redmine.py",
        "src/mcmxi_sopel_modules/sopel_irc/sopel_extras/twit.py"]
[tool.poetry.dependencies]
python = "^3.11"
pyfiglet = "^1.0.2"
pyjokes = "^0.6.0"
pytz = "^2023.3.post1"
click = "^8.1.7"
cssselect = "^1.2.0"
decorator = "^5.1.1"
feedparser = "^6.0.11"
future = "^0.18.3"
geocoder = "^1.38.1"
htmlparser = "^0.0.2"
inflect = "^7.0.0"
jaraco-itertools = "^6.4.1"
more-itertools = "^10.2.0"
praw = "^7.7.1"
pyenchant = "^3.2.2"
pygeoip = "^0.3.2"
pymongo = "^4.6.1"
ratelim = "^0.1.6"
six = "^1.16.0"
update-checker = "^0.18.0"
wolframalpha = "^5.0.0"
xmltodict = "^0.13.0"
ipaddress = "^1.0.23"
mastodon-py = "^1.8.1"
pydictionary = "^2.0.1"
pycoingecko = "^3.1.0"
pytumblr = "^0.1.2"
yfinance = "^0.2.35"
markovify = "^0.9.4"
alpha-vantage = "^2.3.1"
redis = "^5.0.1"
tweepy = "^4.14.0"
bs4 = "^0.0.2"
oauth2 = "^1.9.0.post1"
humanfriendly = "^10.0"
pendulum = "^3.0.0"
streamlink = "^6.5.1"
pytesseract = "^0.3.10"
nicovideo = "^1.0.0"
pushbullet-py = "^0.12.0"
pyvirtualdisplay = "^3.0"
yt-dlp = "^2023.12.30"
pysqlite3 = "^0.5.2"
2to3 = "^1.0"
ouimeaux = "^0.8.2"
mutagen = "^1.47.0"
minidom-ext = "^0.0.6"
regex = "^2023.12.25"
selenium = "^4.16.0"
opencv-python = "^4.9.0.80"
ddict = "^0.1.3"
ddate = "^0.1.2"
googlesearch-python = "^1.2.3"
pyroute2 = "^0.7.11"
xyfny = "^0.0.11"
sopel = {git = "https://github.com/sopel-irc/sopel.git", rev = "973a489"}
sopel-hackernews = {git = "https://github.com/sopel-irc/sopel-hackernews.git"}
sopel-modules-weather = {git = "https://github.com/sopel-irc/sopel-weather.git"}
sopel-ipython = {git = "https://github.com/sopel-irc/sopel-ipython.git"}
sopel-help = {git = "https://github.com/sopel-irc/sopel-help.git"}
sopel-pypi = {git = "https://github.com/sopel-irc/sopel-pypi.git"}
sopel-remind = {git = "https://github.com/sopel-irc/sopel-remind.git"}
sopel-iplookup = {git = "https://github.com/sopel-irc/sopel-iplookup.git"}
sopel-twitter = {git = "https://github.com/sopel-irc/sopel-twitter.git", rev = "742c663"}
sopel-modules-stocks = {git = "https://github.com/sopel-irc/sopel-stocks.git"}
sopel-meetbot = {git = "https://github.com/sopel-irc/sopel-meetbot.git"}
sopel-modules-cryptocurrency = {git = "https://github.com/RustyBower/sopel-cryptocurrency.git"}
sopel-modules-sports = {git = "https://github.com/RustyBower/sopel-sports.git"}
sopel-openweathermap = {git = "https://github.com/davidpirogov/sopel-openweathermap.git"}
recherche-babac2 = {git = "https://github.com/normcyr/recherche_babac2.git"}
sopel-pets = {git = "https://github.com/RustyBower/sopel-pets.git"}
sopel-contextualreminders = {git = "https://github.com/davidpirogov/sopel-contextualreminders.git"}
sopel-plugins-channelmgnt = {git = "https://github.com/FOSSBots/sopel-channelmgnt.git"}
eliza-py = {git = "https://github.com/jezhiggins/eliza.py.git"}
sopel-rainbow = {git = "https://github.com/sopel-irc/sopel-rainbow.git"}
sopel-spellcheck = {git = "https://github.com/sopel-irc/sopel-spellcheck.git"}
sopel-rtfm = {git = "https://github.com/sopel-irc/sopel-rtfm.git"}
sopel-slap = {git = "https://github.com/sopel-irc/sopel-slap.git"}
sopel-waifu = {git = "https://github.com/dgw/sopel-waifu.git"}
sopel-mastodon = {git = "https://github.com/SnoopJ/sopel-mastodon.git"}
sopel-spongemock = {git = "https://github.com/SnoopJ/sopel-spongemock.git"}
sopel-subcmd = {git = "https://github.com/SnoopJ/sopel-subcmd.git"}
sopel-deepl = {git = "https://github.com/dgw/sopel-deepl.git"}
sopel-senpainotice = {git = "https://github.com/dgw/sopel-senpainotice.git"}
sopel-dns = {git = "https://github.com/dgw/sopel-dns.git"}
sopel-diagnosis = {git = "https://github.com/dgw/sopel-diagnosis.git"}
sopel-flipper = {git = "https://github.com/dgw/sopel-flipper.git"}
sopel-py = {git = "https://github.com/sopel-irc/sopel-py.git"}
sopel-amatsukaze = {git = "https://github.com/dgw/sopel-amatsukaze.git"}
sopel-help-sprunge = {git = "https://github.com/dgw/sopel-help.sprunge.git"}
sopel-norris = {git = "https://github.com/dgw/sopel-norris.git"}
sopel-torrentinfo = {git = "https://github.com/dgw/sopel-torrentinfo.git"}
sopel-motivation = {git = "https://github.com/dgw/sopel-motivation.git"}
sopel-modules-urban = {git = "https://github.com/dgw/sopel-urban.git"}
yahooquery = "^2.3.7"
openai = "^1.8.0"
tmdbsimple = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
autoflake = "^2.2.1"
autopep8 = "^2.0.4"
jedi = ">=0.13.0"
json-rpc = ">=1.8.1"
service-factory = ">=0.1.5"
python-lsp-server = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcmxi = "mcmxi_cli:main"

[tool.poetry.plugins]
[tool.poetry.plugins."sopel.plugins"]
mcmxi = "mcmxi_sopel_modules"


[tool.pylint.messages_control]
errors-only = true
ignored-modules = [
    "subprocess"
]

[tool.autopep8]
max_line_length = 79
recursive = true
aggressive = 3
experimental = true

[tool.autoflake]
check = false
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = false
remove-duplicate-keys = true
remove-unused-variables = true
